Bug 325120 - "Timeout on server 207.200.96.255" on start
Summary: "Timeout on server 207.200.96.255" on start
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Internet Services (other bugs)
Version First Reported In: 2.8.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-20 12:06 UTC by arne anka
Modified: 2014-05-21 10:41 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9
Sentry Crash Report:


Attachments
screenshot of popup (4.99 KB, image/png)
2013-09-20 12:06 UTC, arne anka
Details
screenshot of plugin configuration (114.81 KB, image/png)
2013-09-20 12:16 UTC, arne anka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description arne anka 2013-09-20 12:06:22 UTC
since one of the last updates, when starting amarok all of a sudden pops up a message "Timeout on server 297.200.96.255: Socket operation timed out".
now, i have no idea what that means, and as usual, there's no indication what and for what purpose started this request.

the only network related feature i know and care about is fetching lyrics -- which afaiu starts only when a track plays, which is not yet the case here.

Reproducible: Always
Comment 1 arne anka 2013-09-20 12:06:57 UTC
Created attachment 82423 [details]
screenshot of popup
Comment 2 arne anka 2013-09-20 12:15:14 UTC
started a few times over and now notfied a very small progress bar at the left bottom, telling me about "downloading remote playlist".
i don't know what a remote playlist that would be, i never created anything like that and i certainly was never asked about something like that.

i disabled everything in "configure -> plugins -> internet services", and i certainly don't see anywhere something about a "remote playlist"
Comment 3 arne anka 2013-09-20 12:16:17 UTC
Created attachment 82424 [details]
screenshot of plugin configuration
Comment 4 Mark Kretschmann 2013-09-20 12:23:28 UTC
Try disabling the "Free Music Charts" script. I think that fixed it here.
Comment 5 Mark Fraser 2013-09-29 10:49:08 UTC
Free Music Charts is disabled here, but I still get the message about 207.200.96.225. Did a whois on that IP address and it is owned by Netscape.
Comment 6 Anmol Ahuja 2013-09-29 16:52:51 UTC
It's PlaylistFileLoaderJob displaying download errors as long messages. Would printing them as warnings in the debug log be okay?
Comment 7 Mark Kretschmann 2013-09-29 17:29:43 UTC
Definitely better, yes.
Comment 8 Anmol Ahuja 2013-09-30 08:53:59 UTC
Git commit c32e9eca8f6b622f4abf97e0332af06041bdf6ef by Anmol Ahuja.
Committed on 30/09/2013 at 08:00.
Pushed by anmolahuja into branch 'master'.

Print playlist download errors to the debug log.

M  +1    -0    ChangeLog
M  +2    -1    src/core-impl/playlists/types/file/PlaylistFileLoaderJob.cpp

http://commits.kde.org/amarok/c32e9eca8f6b622f4abf97e0332af06041bdf6ef
Comment 9 sparhawk 2013-10-03 00:51:39 UTC
Hi, I have the same problem, but what does PlaylistFileLoaderJob actually do? And what are the ramifications of ignoring these errors?
Comment 10 Anmol Ahuja 2013-10-03 17:14:13 UTC
It loads playlists, including remote ones. Your errors are probably just some script trying to play some broken stream(s).
Comment 11 Sven Krohlas 2013-10-03 17:24:09 UTC
If it helps: The IP address belongs to Netscape/AOL.
Comment 12 sparhawk 2013-10-03 23:26:52 UTC
AFAIK I don't have any remote playlists set up. However, would this include internet radio or podcast directory, etc. plug ins? Also, why would it be polling Netscape/AOL, and why would it be failing, given that my internet is fine?
Comment 13 Anmol Ahuja 2013-10-04 15:32:36 UTC
(In reply to comment #12)
> AFAIK I don't have any remote playlists set up. However, would this include
> internet radio or podcast directory, etc. plug ins?
Yep, like I said it's probably a radio script. Streams urls are inside these remote playlist files. Or do you get the errors with your scripts disabled?

> Also, why would it be
> polling Netscape/AOL, and why would it be failing, given that my internet is
> fine?
Should be a playlist file hosted there at some point, which this script is trying to download.
Comment 14 sparhawk 2013-10-05 05:56:27 UTC
(In reply to comment #13)
> (In reply to comment #12)
> Yep, like I said it's probably a radio script. Streams urls are inside these
> remote playlist files. Or do you get the errors with your scripts disabled?

Ah yes, disabling the "Cool Streams" script prevents this error. When enabled, I can expand the current operations and see about 20 playlists being downloaded. One stalls, and presumably is the source of this error.
Comment 15 vedant agarwala 2014-05-21 10:41:18 UTC
Git commit d8bf9405fb76e630842ba70e286869a782609d25 by Vedant Agarwala, on behalf of Anmol Ahuja.
Committed on 30/09/2013 at 08:00.
Pushed by vedanta into branch 'tagguessing'.

Print playlist download errors to the debug log.

M  +1    -0    ChangeLog
M  +2    -1    src/core-impl/playlists/types/file/PlaylistFileLoaderJob.cpp

http://commits.kde.org/amarok/d8bf9405fb76e630842ba70e286869a782609d25