Print playlist download errors to the debug log.

BUG: 325120